<!--
  ~ Copyright 2015 - Patrick J - ps-app
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">EarthViewer</string>
    <string name="app_bar_title">EarthViewer Beta</string>
    <string name="app_bar_sub_title">Simple Android Library for EarthView by Google</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="info_text_title">EarthViewer [Beta]</string>
    <string name="info_text_content">Showcase Application for\n\'EarthView with Google\'\nWallpapers.</string>
    <string name="info_load_walls_btn_text">Load Wallpapers</string>
    <string name="info_no_wifi_connection_title">No Wifi connection detected!</string>
    <string name="info_no_wifi_connection_subtitle">It\'s highly recommended to connect to a Wifi network!</string>
    <string name="title_activity_wallpaper">WallpaperActivity</string>
    <string name="wall_details_transition_name">wallpaper_details_transition</string>
    <!-- strings for the about activity -->
    <string name="about_activity_title">About EarthViewer</string>
    <!-- strings for the details activity -->
    <string name="details_content_header">Details</string>
    <string name="details_gmaps_header">Google Maps</string>
    <string name="details_city_title">Region</string>
    <string name="details_country_title">Country</string>
    <string name="details_coords_title">Coordinates</string>
    <string name="open_in_google_maps">Google Maps</string>
    <string name="details_attribution_title">Attribution</string>
    <string name="details_share_link_title">Open in Browser</string>
    <!-- social and sharing strings -->
    <string name="item_share_title">Check out this awesome EarthView!\n</string>
    <string name="item_share_via">Share this EarthView via…</string>
    <string name="item_open_via">Open with…</string>
    <!-- misc other strings -->
    <string name="details_unknown">Unknown</string>
    <string name="details_misc_header">Others</string>
    <string name="cancel">Cancel</string>
    <!-- fab strings -->
    <string name="fab_menu_item_share">Share this EarthView</string>
    <string name="fab_menu_item_archive">Add to Favorites</string>
    <string name="fab_menu_item_remove_archive">Remove from Favorites</string>
    <string name="fab_menu_item_apply">Set as Wallpaper</string>
    <string name="fab_menu_item_download">Download</string>
    <!-- snackbar info strings -->
    <string name="fab_snack_bar_fav_added">Wallpaper added to favorites!</string>
    <string name="fab_snack_bar_fav_removed">Wallpaper removed from favorites!</string>
    <string name="fab_snack_bar_fav_action">Got it</string>
    <string name="fab_snack_bar_image_not_cached">Unable to set Image as Wallpaper!</string>
    <string name="snack_bar_perm_denied">Unable to download wallpaper without storage permission!</string>
    <string name="snack_bar_perm_denied_action">Request Again</string>
    <string name="snack_bar_loading_complete">All Wallpapers loaded!</string>
    <string name="snack_bar_loading_cancel_confirmed">Loading Wallpapers canceled.</string>
    <string name="snack_bar_loading_cancel_confirmed_action">Dismiss</string>
    <!-- quick return bar strings -->
    <string name="quick_return_loading_text">Loading…</string>
    <!-- dialog strings -->
    <string name="dialog_cancel_loading_title">Cancel Loading Wallpapers?</string>
    <string name="dialog_cancel_loading_content">This will stop loading further Wallpapers, are you sure you want to cancel all running operations?</string>

    <string name="dialog_no_wifi_title">Warning: Using cellular data!</string>
    <string name="dialog_no_wifi_content">
        <![CDATA[It seems like you\'re not connected to a Wifi network! <b>It\'s highly recommended to connect to a Wifi network</b> before you continue loading the wallpapers.<br />EarthViewer will load up to <b>+1500</b> wallpapers!]]>
    </string>
    <string name="dialog_no_wifi_positive">Load anyways!</string>
    <string name="dialog_no_wifi_negative">Skip Loading</string>

    <string name="dialog_perm_storage_title">Permission required!</string>
    <string name="dialog_perm_storage_content">You have to grant storage permission to this application in order to download this wallpaper.</string>

    <string name="dialog_perm_internet_title">Permission required!</string>
    <string name="dialog_perm_internet_content">You have to grant internet permission to this application in order to load EarthView wallpapers.</string>

    <string name="dialog_perm_network_connection_title">Permission required!</string>
    <string name="dialog_perm_network_connection_content">EarthView by Google is a collection with more than 1500 Wallpapers! To prevent huge traffic when not being connected to a wifi this application requires the Network Permission.</string>

    <string name="dialog_perm_btn_request_again">Okay!</string>
    <string name="dialog_perm_btn_request_cancel">Skip</string>

    <string name="dialog_loading_cancel_confirm">Yes!</string>
    <string name="dialog_loading_cancel_abort">Continue</string>

    <string name="dialog_download_title">Downloading…</string>
    <string name="dialog_download_content">Please wait!</string>
    <string name="dialog_download_finished_title_success">Download finished!</string>
    <string name="dialog_download_finished_title_error">Download failed!</string>
    <string name="dialog_download_finished_content_success">Wallpaper successfully saved to:\n</string>
    <string name="dialog_download_finished_content_error">An error occurred when trying to download this Wallpaper! Check your internet connection and try again!</string>

    <string name="dialog_exit_title">Exit EarthViewer Beta</string>
    <string name="dialog_exit_content">This will cancel all running tasks (if any).\nDo you want to quit the application?</string>
    <string name="dialog_exit_neutral">Never show again</string>

    <!-- navigation drawer strings -->
    <string name="navigation_section_wallpaper">EarthView by Google</string>
    <string name="navigation_section_about">About</string>
    <string name="navigation_item_home">Browse Wallpapers</string>
    <string name="navigation_item_home_desc">Discover the world\'s beauty!</string>
    <string name="navigation_item_favourites">Favorites</string>
    <string name="navigation_item_favourites_desc">View your favorite Wallpapers</string>
    <string name="navigation_item_about">About</string>
    <string name="navigation_item_git">View on GitHub</string>
    <string name="navigation_item_settings">Settings</string>

    <!-- preference strings -->
    <string name="preferences_category_general">General</string>

    <string name="preferences_item_data_saver_title">Save Mobile Data</string>
    <string name="preferences_item_data_saver_summary">Prevents downloading or caching a huge amount of images when not using WiFi</string>
    <string name="preferences_item_auto_load_title">Automatically Load Images on Wifi</string>
    <string name="preferences_item_auto_load_summary">If a Wifi connection is present the images will start loading automatically</string>
    <string name="preferences_item_loading_bar_title">Show Loading Bar</string>
    <string name="preferences_item_loading_bar_summary">Enable/Disable the Loading Bar when loading Wallpapers</string>
    <string name="preferences_item_wall_source_title">Wallpaper Source</string>
    <string name="preferences_item_wall_source_summary">Set whether to use the built-in or the web-api reference list of wallpapers</string>
    <string name="preferences_item_wall_folder_select">Choose</string>
    <string name="preferences_item_wall_folder_cancel">Cancel</string>
    <string name="preferences_item_output_dir_title">Wallpaper Export Location</string>
    <string name="preferences_item_output_dir_summary">%wall%</string>
    <string name="preferences_item_load_random_title">Load Wallpapers Randomly</string>
    <string name="preferences_item_load_random_summary">Shuffle the Wallpapers each time before loading them (Restart required)</string>

    <string name="preferences_category_interface">Interface</string>

    <string name="preferences_item_recycler_cells_title">Wallpaper Columns</string>
    <string name="preferences_item_recycler_cells_summary">Change the amount of columns used to display the wallpapers</string>
    <string name="preferences_item_typeface_title">Application Typeface</string>
    <string name="preferences_item_typeface_summary">Change the Application\'s typeface (Restart recommended)</string>
    <string name="preferences_item_tint_navbar_title">Tint Navigation Bar</string>
    <string name="preferences_item_tint_navbar_summary">Enable tinting of the Navigation Bar (Android 5.0 and higher only)</string>

    <string name="preferences_category_caching">Memory Management</string>

    <string name="preferences_item_cache_lifecycle_title">Cache Lifecycle</string>
    <string name="preferences_item_cache_lifecycle_summary">Manage the duration of the cached content\'s lifecycle</string>

    <string name="preferences_item_cache_mode_title">Caching Mode</string>
    <string name="preferences_item_cache_mode_summary">Set the caching type to reduce the loading time of the wallpapers</string>

    <string name="preferences_item_clear_cache_title">Clear Cache</string>
    <string name="preferences_item_clear_cache_summary">Delete all files stored inside the application\'s cache directory. Cache Size: %s</string>

    <string name="preferences_item_clear_internal_title">Clear Internal Storage</string>
    <string name="preferences_item_clear_internal_summary">Delete all files stored inside the application\'s file directory. Internal Data Size: %s</string>

    <string name="preferences_category_other">Build Information</string>

    <string name="preferences_item_build_title">Build Version</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="empty_favorites_title">You don\'t have any Favorites</string>

    <!-- Muzei related strings -->
    <string name="muzei_settings_dialog_title">EarthViewer Muzei Settings</string>
    <string name="muzei_settings_dialog_text_minutes">Set Background Interval (Minutes)</string>
    <string name="muzei_settings_dialog_text_hours">Set Background Interval (Hours)</string>
    <string name="muzei_settings_dialog_checkbox">Use hours instead of minutes</string>
    <string name="muzei_settings_dialog_btn_positve">Apply</string>
    <string name="muzei_settings_dialog_btn_negative">Cancel</string>
    <string name="muzei_settings_dialog_postfix_min">%s Minutes</string>
    <string name="muzei_settings_dialog_postfix_hours">%s Hours</string>


</resources>
