<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 - Patrick J - ps-app
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wallpaper_coordinator_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.pddstudio.wallpaperrecyclerdemo.WallpaperActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_wall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <!--android:theme="@style/AppTheme.AppBarOverlay"-->

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/wallpaper_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- for hiding the toolbar text
            app:collapsedTitleTextAppearance="@android:color/transparent"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:titleEnabled="false"
            -->

            <ImageView
                android:id="@+id/wall_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="imageTrans"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_details_view"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:transitionName="textTrans"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_wallpaper" />

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />-->
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/details_fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:menu_colorNormal="@color/fabColorNormal"
        app:menu_colorPressed="@color/fabColorPressed"
        app:menu_colorRipple="@color/fabColorRipple"
        app:layout_behavior="com.pddstudio.earthviewer.views.utils.CustomFabBehavior">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_label="@string/fab_menu_item_download"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_label="@string/fab_menu_item_apply"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_label="@string/fab_menu_item_archive"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_item_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_label="@string/fab_menu_item_share"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
